@startuml
title State Machine Morse Recorder

[*] --> Idle
Idle --> KeyDown : Key Down
KeyDown --> KeyUp : Key Up
KeyDown --> Dot : Timeout
Dot --> Dash : Timeout
Dot --> KeyUp : KeyUp
Dash --> KeyUp : Key Up
KeyUp --> CharacterSpace : Timeout
KeyUp --> KeyDown : Key Down
CharacterSpace --> WordSpace : Timeout
CharacterSpace --> KeyDown : Key Down
WordSpace --> KeyDown : Key Down
WordSpace --> Idle : Timeout

state Idle : stopTimeout()
state Idle : appendRecord("\\n")
state KeyDown : stopTimeout()
state KeyDown : startTimeout(1)
state Dot : startTimeout(2)
state Dot : appendRecord(".")
state Dash : correctRecord("-")
state KeyUp : stopTimeout()
state KeyUp : startTimeout(3)
state CharacterSpace : startTimeout(4)
state CharacterSpace : appendRecord(" ")
state WordSpace : startTimeout(10)
state WordSpace : appendRecord("/ ")

@enduml
